tests/endtoend/failure/expected/error_keyword_declare.compile.out
error_keyword_declare.silly:1:7: error: parse error: mismatched input 'INT32' expecting IDENTIFIER
    1 | INT32 INT32;
      |       ^
